#260: Action/request menu in result browser shows no scrollbar, but overflows - ensure content does not overflow (both in the left-side menu, but also in the content area) - ensure the whole load error box is hidden, not just its content, if there was no load error - ensure the splitter bar does not shrink when resizing the window - make the splitter bar wider by 1 px so it is easier to grab - ensure the View as HAR link is hidden also on network error/if not found on local disk

--- a/resultbrowser/src/css/default.css
+++ b/resultbrowser/src/css/default.css
@@ -298,6 +298,7 @@ body {
 #content {
     background-color: white;
     height: 100%;
+    overflow: auto;
 }
 
 #actioncontent {
@@ -534,8 +535,13 @@ table.key-value-table td.value .csep {
     flex-flow: column;
 }
 
+.flexItem-fill {
+    flex: 1 1 0;    /* grow/shrink as needed */
+}
+
 .gutter {
     background-color: rgb(169, 169, 169);
+    flex: 0 0 auto;    /* don't grow/shrink the splitter */
 }
 
 .gutter.gutter-horizontal {
